--- a/Styles/scss/styles.scss
+++ b/Styles/scss/styles.scss
@@ -3,16 +3,24 @@
     --secondary-color: #f1b742;
     --background-color: #f1f9f9;
     --text-color-dark: #000000;
-    --text-color-light: #bbbbbb;
+    --text-color-light: #8d8d8d;
+    --text-color-white: #ffffff;
     --font-family: 'Roboto', sans-serif;
 }
 
 body {
     margin: 0;
-    font-family: 'Roboto', sans-serif;
-    background-color: #f5f5f5;
+    font-family: var(--font-family);
+    background-color: var(--background-color);
     height: 100dvh;
     width: 100dvw;
+}
+
+.unselectable {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .hidden {
@@ -27,16 +35,17 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 1rem;
-    position: absolute;
+    padding: 0 3rem;
+    position: relative;
     top: 0;
     left: 0;
     z-index: 1000;
     width: 100%;
     box-sizing: border-box;
 
-    h1 {
+    .hero {
         font-size: 1.5rem;
+        font-weight: 500;
         color: var(--primary-color);
     }
     ul {
