--- a/Styles/css/styles.css
+++ b/Styles/css/styles.css
@@ -54,6 +54,10 @@ nav ul {
   list-style: none;
   display: flex;
   gap: 3rem;
+  padding: 0;
+}
+nav ul li.navbar-list-item {
+  padding: 0;
 }
 nav ul li.navbar-list-item a.navbar-link {
   text-decoration: none;
@@ -62,7 +66,7 @@ nav ul li.navbar-list-item a.navbar-link {
   justify-content: center;
   gap: 0.5rem;
   box-sizing: border-box;
-  padding: 0 1rem;
+  padding: 0 0.5rem;
   border-radius: 0.5rem;
   color: var(--text-color-dark);
 }
@@ -77,6 +81,9 @@ nav ul li.navbar-list-item a.navbar-link:hover {
 }
 
 @media (max-width: 1024px) {
+  nav {
+    padding: 0 1rem;
+  }
   nav ul {
     gap: 1rem;
   }
@@ -97,10 +104,10 @@ nav ul li.navbar-list-item a.navbar-link:hover {
   nav ul {
     gap: 0.5rem;
   }
-  nav ul li {
-    padding: 0 0.25rem;
+  nav ul li.navbar-list-item a.navbar-bar-link {
+    padding: 0 0.125rem;
   }
-  nav ul li .label {
+  nav ul li.navbar-list-item a.navbar-bar-link .label {
     font-size: 0.8rem;
   }
 }
