--- a/Styles/scss/styles.scss
+++ b/Styles/scss/styles.scss
@@ -55,8 +55,10 @@ nav {
         list-style: none;
         display: flex;
         gap: 3rem;
+        padding: 0;
 
         li.navbar-list-item {
+            padding: 0;
             a.navbar-link {
                 text-decoration: none;
                 display: flex;
@@ -64,7 +66,7 @@ nav {
                 justify-content: center;
                 gap: 0.5rem;
                 box-sizing: border-box;
-                padding: 0 1rem;
+                padding: 0 0.5rem;
                 border-radius: 0.5rem;
                 color: var(--text-color-dark);
                 .label {
@@ -82,17 +84,19 @@ nav {
 }
 
 @media (max-width: 1024px) {
-    nav ul {
-        gap: 1rem;
-        li {
-            padding: 0 0.5rem;
-            .label {
-                font-size: 0.9rem;
+    nav {
+        padding: 0 1rem;
+        ul {
+            gap: 1rem;
+            li {
+                padding: 0 0.5rem;
+                .label {
+                    font-size: 0.9rem;
+                }
             }
         }
     }
 }
-
 @media (max-width: 425px) {
     nav {
         padding: 0 1rem;
@@ -101,11 +105,13 @@ nav {
         }
         ul {
             gap: 0.5rem;
-            li {
-                padding: 0 0.25rem;
+            li.navbar-list-item {
+                a.navbar-bar-link {
+                    padding: 0 0.125rem;
                 .label {
                     font-size: 0.8rem;
                 }
+            }
             }
         }
     }
