--- a/public/Styles/css/profile.css
+++ b/public/Styles/css/profile.css
@@ -128,4 +128,4 @@ main .container .stats .statsCards .statsCard .statCategory {
   font-size: 1rem;
   font-weight: 400;
   color: var(--text-color-light);
-}
+}/*# sourceMappingURL=profile.css.map */
