--- a/public/Styles/css/achievements.css
+++ b/public/Styles/css/achievements.css
@@ -12,23 +12,20 @@ body {
   overflow-x: hidden;
 }
 
-nav {
-  padding: 0 1rem;
-}
-nav ul {
-  padding: 0;
-}
-
 main {
   padding: 2rem 3rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 main h1 {
   margin: 1rem 0 0 0;
+  font-size: 2rem;
+  font-weight: 600;
 }
 main .summaryCards {
   display: flex;
   gap: 2rem;
-  margin-top: 2rem;
   flex-wrap: wrap;
   align-items: stretch;
   justify-content: center;
@@ -38,11 +35,12 @@ main .summaryCards .summaryCard {
   flex: 1 1 calc(25% - 2rem);
   flex: 1;
   background-color: white;
-  padding: 0.5rem 2rem 2rem 2rem;
+  padding: 2rem 2rem 2rem 2rem;
   border-radius: 0.5rem;
   border: 1px solid #d4dfdf;
   text-align: center;
   min-width: 15rem;
+  gap: 0.5rem;
   flex-wrap: nowrap;
   display: flex;
   flex-direction: column;
@@ -65,6 +63,10 @@ main .summaryCards .summaryCard .summaryCardInfo {
   justify-content: space-between;
   font-size: 0.75rem;
   font-weight: 300;
+}
+main .summaryCards .summaryCard .summaryCardInfo h2 {
+  font-size: 1rem;
+  font-weight: 500;
 }
 main .summaryCards .summaryCard .summaryCardInfo .material-symbols-outlined {
   font-size: 1.25rem;
@@ -99,7 +101,6 @@ main .summaryCards .summaryCard .additionalText {
   color: var(--text-color-light);
 }
 main .achievementFilter {
-  margin-top: 2rem;
   display: flex;
   align-items: center;
   list-style: none;
@@ -107,6 +108,7 @@ main .achievementFilter {
   min-height: 2rem;
   padding: 0.25rem;
   border-radius: 0.5rem;
+  width: 100%;
 }
 main .achievementFilter li {
   width: 20%;
@@ -127,7 +129,6 @@ main .achievementCards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
-  margin-top: 4rem;
   width: 100%;
 }
 main .achievementCards .achievementCard {
@@ -145,6 +146,7 @@ main .achievementCards .achievementCard {
   text-decoration: none;
   color: var(--text-color-dark);
   text-align: left;
+  gap: 0.25rem;
 }
 main .achievementCards .achievementCard:hover {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -167,6 +169,16 @@ main .achievementCards .achievementCard .achievementCardInfo {
   justify-content: space-between;
   font-size: 0.75rem;
   font-weight: 300;
+  margin-top: 0.5rem;
+}
+main .achievementCards .achievementCard .achievementCardInfo h2 {
+  font-size: 1rem;
+  font-weight: 500;
+}
+main .achievementCards .achievementCard .achievementCardInfo p {
+  font-size: 0.75rem;
+  color: var(--text-color-light);
+  margin: 0;
 }
 main .achievementCards .achievementCard .achievementCardValue {
   font-size: 1.5rem;
@@ -185,4 +197,4 @@ main .achievementCards .achievementCard .progressBar {
   .achievementCards {
     grid-template-columns: repeat(1, 1fr) !important;
   }
-}
+}/*# sourceMappingURL=achievements.css.map */
