--- a/public/Styles/css/styles.css
+++ b/public/Styles/css/styles.css
@@ -16,6 +16,12 @@ body {
   width: 100dvw;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .unselectable {
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -30,10 +36,10 @@ body {
   display: block !important;
 }
 
-nav {
-  background-color: white;
+.mainNav {
+  background-color: #fbfdfc;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  min-height: 2rem;
+  min-height: 5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -45,21 +51,19 @@ nav {
   width: 100%;
   box-sizing: border-box;
 }
-nav .hero {
+.mainNav .hero {
   font-size: 1.5rem;
   font-weight: 500;
   color: var(--primary-color);
 }
-nav ul {
+.mainNav ul.navbar-list {
   list-style: none;
   display: flex;
   gap: 3rem;
   padding: 0;
+  height: 100%;
 }
-nav ul li.navbar-list-item {
-  padding: 0;
-}
-nav ul li.navbar-list-item a.navbar-link {
+.mainNav ul.navbar-list li.navbar-list-item a.navbar-link {
   text-decoration: none;
   display: flex;
   align-items: center;
@@ -70,12 +74,14 @@ nav ul li.navbar-list-item a.navbar-link {
   border-radius: 0.5rem;
   color: var(--text-color-dark);
 }
-nav ul li.navbar-list-item a.navbar-link .label {
+.mainNav ul.navbar-list li.navbar-list-item a.navbar-link .label {
   text-decoration: none;
   color: var(--text-color-dark);
   font-weight: 500;
+  margin-block-end: 1rem;
+  margin-block-start: 1rem;
 }
-nav ul li.navbar-list-item a.navbar-link:hover {
+.mainNav ul.navbar-list li.navbar-list-item a.navbar-link:hover {
   cursor: pointer;
   background-color: var(--secondary-color);
 }
@@ -110,4 +116,4 @@ nav ul li.navbar-list-item a.navbar-link:hover {
   nav ul li.navbar-list-item a.navbar-bar-link .label {
     font-size: 0.8rem;
   }
-}
+}/*# sourceMappingURL=styles.css.map */
