--- a/public/Styles/scss/achievements.scss
+++ b/public/Styles/scss/achievements.scss
@@ -10,21 +10,19 @@
 body {
     overflow-x: hidden;
 }
-nav {
-    padding: 0 1rem;
-    ul {
-        padding: 0;
-    }
-}
 main {
     padding: 2rem 3rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
     h1 {
         margin: 1rem 0 0 0;
+        font-size: 2rem;    
+        font-weight: 600;
     }
     .summaryCards {
         display: flex;
         gap: 2rem;
-        margin-top: 2rem;
         flex-wrap: wrap;
         align-items: stretch;
         justify-content: center;
@@ -33,11 +31,12 @@ main {
             flex: 1 1 calc(25% - 2rem);
             flex: 1;
             background-color: white;
-            padding: 0.5rem 2rem 2rem 2rem;
+            padding: 2rem 2rem 2rem 2rem;
             border-radius: 0.5rem;
             border: 1px solid #d4dfdf;
             text-align: center;
             min-width: 15rem;
+            gap: 0.5rem;
             flex-wrap: nowrap;
             display: flex;
             flex-direction: column;
@@ -61,6 +60,11 @@ main {
                 justify-content: space-between;
                 font-size: 0.75rem;
                 font-weight: 300;
+
+                h2 {
+                    font-size: 1rem;
+                    font-weight: 500;
+                }
 
                 .material-symbols-outlined {
                     font-size: 1.25rem;
@@ -110,7 +114,6 @@ main {
         }
     }
     .achievementFilter {
-        margin-top: 2rem;
         display: flex;
         align-items: center;
         list-style: none;
@@ -118,6 +121,7 @@ main {
         min-height: 2rem;
         padding: 0.25rem;
         border-radius: 0.5rem;
+        width: 100%;
         li {
             width: 20%;
             button {
@@ -140,7 +144,6 @@ main {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 2rem;
-        margin-top: 4rem;
         width: 100%;
         .achievementCard {
             background-color: white;
@@ -157,6 +160,7 @@ main {
             text-decoration: none;
             color: var(--text-color-dark);
             text-align: left;
+            gap: 0.25rem;
 
             &:hover {
                 box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -181,7 +185,17 @@ main {
                 justify-content: space-between;
                 font-size: 0.75rem;
                 font-weight: 300;
+                margin-top: 0.5rem;
 
+                h2 {
+                    font-size: 1rem;
+                    font-weight: 500;
+                }
+                p {
+                    font-size: 0.75rem;
+                    color: var(--text-color-light);
+                    margin: 0;
+                }
             }
 
             .achievementCardValue {
