--- a/public/Styles/scss/dashboard.scss
+++ b/public/Styles/scss/dashboard.scss
@@ -1,9 +1,18 @@
 main {
     padding: 2rem 3rem;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    h1 {
+        font-size: 2rem;
+        font-weight: 600;
+        color: var(--text-color-dark);
+    }
     .dashboardCards {
         display: flex;
         gap: 2rem;
-        margin-top: 4rem;
+        margin-top: 2rem;
         flex-wrap: wrap;
         align-items: center;
         justify-content: center;
@@ -12,7 +21,7 @@ main {
             flex: 1 1 calc(25% - 2rem);
             a.dashboardCardLink {
                 background-color: white;
-                padding: 0.5rem 2rem 2rem 2rem;
+                padding: 1.5rem 2rem 2rem 2rem;
                 border-radius: 0.5rem;
                 border: 1px solid #d4dfdf;
                 text-align: center;
@@ -25,6 +34,7 @@ main {
                 box-sizing: border-box;
                 text-decoration: none;
                 color: var(--text-color-dark);
+                gap: 0.5rem;
                 &:nth-child(3),
                 &:nth-child(4) {
                     .dashboardCardInfo {
@@ -49,6 +59,14 @@ main {
                     font-size: 0.75rem;
                     font-weight: 300;
 
+                    h2 {
+                        margin: 0;
+                        padding: 0;
+                        font-size: 1rem;
+                        font-weight: 500;
+                        color: var(--text-color-dark);
+                    }
+
                     .material-symbols-outlined {
                         font-size: 1.25rem;
                         color: var(--text-color-light);
@@ -72,12 +90,14 @@ main {
         }
     }
     .myDecks {
-        margin-top: 4rem;
+        margin-top: 2rem;
         background-color: white;
         border: 1px solid #d4dfdf;
         border-radius: 1rem;
-        min-height: 20rem;
+        min-height: 25rem;
         width: 100%;
+        display: flex;
+        flex-direction: column;
 
         .myDecksInfo {
             padding: 1rem 2rem;
@@ -93,7 +113,7 @@ main {
                 color: var(--text-color-dark);
             }
             a.addDeckButton {
-                padding: 0.25rem 0.5rem;
+                padding: 0.5rem 0.75rem;
                 font-size: 1rem;
                 font-weight: 500;
                 border-radius: 0.5rem;
@@ -117,6 +137,7 @@ main {
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            flex: 1;
             .noDecksPlaceholder {
                 padding: 2rem;
                 text-align: center;
