--- a/public/Styles/scss/frontpage.scss
+++ b/public/Styles/scss/frontpage.scss
@@ -1,9 +1,8 @@
-nav {
-    box-shadow: none;
+.mainNav {
     background-color: var(--background-color);
+    box-shadow: none;
     ul {
         li.navbar-list-item {
-            padding: 0;
 
             a.navbar-link {
                 display: flex;
@@ -12,7 +11,7 @@ nav {
                 gap: 0.5rem;
 
                 box-sizing: border-box;
-                padding: 0 1rem;
+                padding: 0.5rem 2rem;
                 border-radius: 0.5rem;
 
                 height: 2.5rem;
@@ -57,9 +56,11 @@ main {
     justify-content: center;
     align-items: center;
     padding: 2rem 0;
+    gap: 2rem;
     h1 {
         font-size: 3.5rem;
         text-align: center;
+        font-weight: bold;
     }
     h2 {
         text-align: center;
@@ -67,7 +68,6 @@ main {
         font-weight: 400;
     }
     a.get-started-button {
-        margin-top: 2rem;
         padding: 0.75rem 2rem;
         font-size: 1.25rem;
         font-weight: 500;
@@ -83,9 +83,9 @@ main {
         }
     }
     .infoCards {
+        margin-top: 2rem;
         display: flex;
         gap: 2rem;
-        margin-top: 4rem;
         flex-wrap: wrap;
         align-items: center;
         justify-content: center;
@@ -100,6 +100,7 @@ main {
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            gap: 1rem;
             &:hover {
                 box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
                 transition: 0.3s;
